boxxy/videowall/css/videowall.css
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    background: #FF0019; /* CHROMAH KEY */
    overflow: hidden;
}
#marquee-top {
    position: fixed; top: 0;
    height: 100px; width: 100%;
    background-color: #fff;

    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 75px;
    line-height: 1;
}

#marquee {
    position: fixed; bottom: 0; margin-bottom: -150px;
    height: 150px; width: 100%;
    background-color: #fff;

    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 80px;
    line-height: 1;
}
#marquee-fade {
    position: absolute; top: 0;
    height: 100%; width: 100%;
    background:
        url('../img/12urenloop.png') 15px center no-repeat,
        linear-gradient(to right,
            rgba(255,255,255,1) 230px, rgba(255,255,255,0) 260px,
            rgba(255,255,255,0) 90%,rgba(255,255,255,1) 97%);
}
#marquee ol {
    position: relative;
    margin: 0;
    list-style-type: none;
    width: 99999px;
    padding-bottom: 40px;
}
#marquee li {
    padding-top: 35px;
    margin-right: 50px;
    float: left;
}
#marquee-top ol {
    position: relative;
    margin: 0;
    list-style-type: none;
    width: 99999px;
}
#marquee-top li {
    padding-top: 10px;
    margin-right: 50px;
    float: left;
}

